src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__class_struct_initialized_in_function.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: function
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fb = type { i16 }
%main = type { %fb }

@__fb__init = unnamed_addr constant %fb { i16 9 }
@main_instance = global %main { %fb { i16 9 } }

define void @fb(%fb* %0) {
entry:
  %a = getelementptr inbounds %fb, %fb* %0, i32 0, i32 0
  ret void
}

define i32 @func(%fb* %0) {
entry:
  %func = alloca i32, align [filtered]
  %in = alloca %fb, align [filtered]
  %1 = bitcast %fb* %in to i8*
  %2 = bitcast %fb* %0 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %1, i8* align [filtered] %2, i64 ptrtoint (%fb* getelementptr (%fb, %fb* null, i32 1) to i64), i1 false)
  %x = alloca %fb, align [filtered]
  %3 = bitcast %fb* %x to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align [filtered] %3, i8* align [filtered] bitcast (%fb* @__fb__init to i8*), i64 ptrtoint (%fb* getelementptr (%fb, %fb* null, i32 1) to i64), i1 false)
  store i32 0, i32* %func, align [filtered]
  %func_ret = load i32, i32* %func, align [filtered]
  ret i32 %func_ret
}

define void @main(%main* %0) {
entry:
  %fb0 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %call = call i32 @func(%fb* %fb0)
  ret void
}

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

attributes #0 = { argmemonly nofree nounwind willreturn }
