src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__function_block_struct_initialized_in_function.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: function
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { %fb }
%fb = type {}

@main_instance = global %main zeroinitializer

define void @fb(ptr %0) {
entry:
  %this = alloca ptr, align [filtered]
  store ptr %0, ptr %this, align [filtered]
  ret void
}

define i32 @func(ptr %0) {
entry:
  %func = alloca i32, align [filtered]
  %in = alloca %fb, align [filtered]
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %in, ptr align [filtered] %0, i64 ptrtoint (ptr getelementptr (%fb, ptr null, i32 1) to i64), i1 false)
  %x = alloca %fb, align [filtered]
  store i32 0, ptr %func, align [filtered]
  %func_ret = load i32, ptr %func, align [filtered]
  ret i32 %func_ret
}

define void @main(ptr %0) {
entry:
  %fb0 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %call = call i32 @func(ptr %fb0)
  ret void
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
