src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__function_return_value_is_initialized.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: function
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @foo_int() {
entry:
  %foo_int = alloca i16, align [filtered]
  store i16 0, ptr %foo_int, align [filtered]
  %foo_int_ret = load i16, ptr %foo_int, align [filtered]
  ret i16 %foo_int_ret
}

define void @foo_str(ptr %0) {
entry:
  %foo_str = alloca ptr, align [filtered]
  store ptr %0, ptr %foo_str, align [filtered]
  ret void
}

define void @foo_arr(ptr %0) {
entry:
  %foo_arr = alloca ptr, align [filtered]
  store ptr %0, ptr %foo_arr, align [filtered]
  ret void
}

define void @foo_struct(ptr %0) {
entry:
  %foo_struct = alloca ptr, align [filtered]
  store ptr %0, ptr %foo_struct, align [filtered]
  ret void
}
