src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__function_return_value_is_initialized_with_type_initializer.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: function
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [4 x i32], [4 x i32] }

@main_instance = global %main zeroinitializer

define void @target(ptr %0) {
entry:
  %target = alloca ptr, align [filtered]
  store ptr %0, ptr %target, align [filtered]
  %deref = load ptr, ptr %target, align [filtered]
  %tmpVar = getelementptr inbounds [4 x i32], ptr %deref, i32 0, i32 2
  store i32 7, ptr %tmpVar, align [filtered]
  ret void
}

define void @main(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %__target0 = alloca [4 x i32], align [filtered]
  call void @llvm.lifetime.start.p0(i64 -1, ptr %__target0)
  call void @llvm.memset.p0.i64(ptr align [filtered] %__target0, i8 0, i64 ptrtoint (ptr getelementptr ([4 x i32], ptr null, i32 1) to i64), i1 false)
  call void @target(ptr %__target0)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %x, ptr align [filtered] %__target0, i64 ptrtoint (ptr getelementptr ([4 x i32], ptr null, i32 1) to i64), i1 false)
  call void @llvm.lifetime.end.p0(i64 -1, ptr %__target0)
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %y, ptr align [filtered] %x, i64 ptrtoint (ptr getelementptr ([4 x i32], ptr null, i32 1) to i64), i1 false)
  ret void
}

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.start.p0(i64 immarg, ptr captures(none)) #0

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #1

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #2

; Function Attrs: nocallback nofree nosync nounwind willreturn memory(argmem: readwrite)
declare void @llvm.lifetime.end.p0(i64 immarg, ptr captures(none)) #0

attributes #0 = { nocallback nofree nosync nounwind willreturn memory(argmem: readwrite) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #2 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
