src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__initial_constant_values_in_pou_variables.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%prg_interface = type { i16, i16 }

@MAX_LEN = addrspace(4) global i16 99
@MIN_LEN = addrspace(4) global i16 10
@LEN = addrspace(4) global i16 20
@prg_instance = global %prg_interface { i16 24, i16 89 }

define void @prg(%prg_interface* %0) {
entry:
  %my_len = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 0
  %my_size = getelementptr inbounds %prg_interface, %prg_interface* %0, i32 0, i32 1
  ret void
}

