src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__initial_values_in_function_block_pou.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%FB = type { i16, i16, i8, i8, float, float }
%main = type { %FB }

@__FB__init = unnamed_addr constant %FB { i16 7, i16 0, i8 1, i8 0, float 0x400921CAC0000000, float 0.000000e+00 }
@main_instance = global %main { %FB { i16 7, i16 0, i8 1, i8 0, float 0x400921CAC0000000, float 0.000000e+00 } }

define void @FB(%FB* %0) {
entry:
  %this = alloca %FB*, align [filtered]
  store %FB* %0, %FB** %this, align [filtered]
  %x = getelementptr inbounds %FB, %FB* %0, i32 0, i32 0
  %xx = getelementptr inbounds %FB, %FB* %0, i32 0, i32 1
  %y = getelementptr inbounds %FB, %FB* %0, i32 0, i32 2
  %yy = getelementptr inbounds %FB, %FB* %0, i32 0, i32 3
  %z = getelementptr inbounds %FB, %FB* %0, i32 0, i32 4
  %zz = getelementptr inbounds %FB, %FB* %0, i32 0, i32 5
  ret void
}

define void @main(%main* %0) {
entry:
  %fb = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  ret void
}
