src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__initial_values_in_program_pou.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%Main_interface = type { i16, i16, i1, i1, float, float }

@Main_instance = global %Main_interface { i16 7, i16 0, i1 true, i1 false, float 0x400921CAC0000000, float 0.000000e+00 }

define void @Main(%Main_interface* %0) {
entry:
  %x = getelementptr inbounds %Main_interface, %Main_interface* %0, i32 0, i32 0
  %xx = getelementptr inbounds %Main_interface, %Main_interface* %0, i32 0, i32 1
  %y = getelementptr inbounds %Main_interface, %Main_interface* %0, i32 0, i32 2
  %yy = getelementptr inbounds %Main_interface, %Main_interface* %0, i32 0, i32 3
  %z = getelementptr inbounds %Main_interface, %Main_interface* %0, i32 0, i32 4
  %zz = getelementptr inbounds %Main_interface, %Main_interface* %0, i32 0, i32 5
  ret void
}

