src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__memcpy_for_struct_initialization_in_function.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%__func_a = type { i16 }

define signext i16 @func() {
entry:
  %func = alloca i16, align [filtered]
  %a = alloca %__func_a, align [filtered]
  call void @llvm.memset.p0.i64(ptr align [filtered] %a, i8 0, i64 ptrtoint (ptr getelementptr (%__func_a, ptr null, i32 1) to i64), i1 false)
  store i16 0, ptr %func, align [filtered]
  %func_ret = load i16, ptr %func, align [filtered]
  ret i16 %func_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
