src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__no_memcpy_for_struct_initialization_in_program.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%prog = type { %__prog_a }
%__prog_a = type { i16 }

@prog_instance = global %prog zeroinitializer
@____prog_a__init = unnamed_addr constant %__prog_a zeroinitializer

define void @prog(%prog* %0) {
entry:
  %a = getelementptr inbounds %prog, %prog* %0, i32 0, i32 0
  ret void
}

