src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__two_identical_enums_in_different_functions_are_referenced_correctly.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: function
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@__foo_position.x = unnamed_addr constant i32 1
@__bar_position.x = unnamed_addr constant i32 3
@__foo_position.y = unnamed_addr constant i32 2
@__bar_position.y = unnamed_addr constant i32 4

define i32 @foo() {
entry:
  %foo = alloca i32, align [filtered]
  %position = alloca i32, align [filtered]
  store i32 1, i32* %position, align [filtered]
  store i32 0, i32* %foo, align [filtered]
  %foo_ret = load i32, i32* %foo, align [filtered]
  ret i32 %foo_ret
}

define i32 @bar() {
entry:
  %bar = alloca i32, align [filtered]
  %position = alloca i32, align [filtered]
  store i32 3, i32* %position, align [filtered]
  store i32 0, i32* %bar, align [filtered]
  %bar_ret = load i32, i32* %bar, align [filtered]
  ret i32 %bar_ret
}
